<resources>
    <string name="app_name">TimeLoom</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="default_timer">25:00</string>
    <string name="done">Done!</string>
    <string name="pause">Pause</string>
    <string name="session_label">Work Time</string>
    <string name="resume">Resume</string>
    <string name="work_time">Work Time</string>
    <string name="break_time">Break Time</string>



</resources>